feat: report products with summary transactions
